/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.dremio.service.script.proto;

option java_package = "com.dremio.service.script.proto";
option optimize_for = SPEED;
option java_outer_classname = "ScriptProto";


message Script {
  string script_id = 1; // unique id of a script
  string name = 2; // name of a script

  uint64 created_at = 3; // time when script was created
  string created_by = 4; // username who created script this wont be updated

  string description = 5; // description about script, required??

  uint64 modified_at = 6; // time when script was last modified at
  string modified_by = 7; // user who last modified the script

  repeated string context = 8; // context of script
  string content = 9; // content of script

}

message ScriptRequest {
  string name = 1;
  string description = 2;
  repeated string context = 3;
  string content = 4;
}
